tests/resource/valid/function/function_raise_super.mamba
class MyErr: Exception
class MyErr2: Exception

def f(fun: Int -> Int) raise [MyErr, MyErr2] => g()
def g() raise [MyErr2] => pass
